Fixed homepage padding and cards overflow

--- a/src/components/ChefOfTheWeek/ChefOfTheWeek.scss
+++ b/src/components/ChefOfTheWeek/ChefOfTheWeek.scss
@@ -10,7 +10,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0 129px;
+    padding: 0;
+    //padding: 0 129px;
     gap: 40px;
   }
 
